# hunterFormsBS

./: CITATION.cff  LICENSE-Solovyev  LICENSE-Wang  README.md  context7.json  pyproject.toml  ruff.toml
.github/: HH-docstrings.md
.github/workflows/: pypiRelease.yml
.serena/: project.yml
.serena/memories/: docstring_compatibility.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md  testing_notes.md  transformer_compatibility_flags.md
.serena/memories/repo/: docstring_math_sections.md
citations/: 10446843.bib  Ansel_PyTorch_2_Faster_2024.bib  CITATION.cff  Hogan_torch-einops-kit_2026.bib  ICLR2025_b286c344.bib  NEURIPS2019_1e8a1942.bib  NEURIPS2021_a655fbe4.bib  NEURIPS2022_67d57c32.bib  SU2024127063.bib  chen_dttnet_2024.bib  gopalakrishnan2025decoupling.bib  hendrycks2016gaussian.bib  ju_chiang_wang_2024_14877371.bib  pmlr-v267-zhang25ae.bib  pmlr-v70-dauphin17a.bib  rogozhnikov2022einops.bib  unwa_BS-Roformer-HyperACE_2025.bib  zhang2025sageattention.bib  zhou-etal-2025-value.bib
src/hunterFormsBS/: __init__.py  attend.py  attend_experimental.py  bandSplit.py  bandSplitAnnex.py  bandSplitRotator.py  bands.py  bs_roformer.py  bs_roformerUNWA.py  bs_roformer_experimental.py  hyperACE.py  loss.py  make_static_mask_filter_bank.py  mask.py  mel_band_roformer.py  mel_band_roformer_experimental.py  theTypes.py  transform.py
tests/: conftest.py  test_BandSplit.py  test_import.py  test_loss.py  test_mask.py  test_transform.py
tests/dataSamples/: bands.py  loss.py  makeRLE.py  makeWAV.ipynb  tensors.py
