[project]
name = "hunterFormsBS"
version = "0.3.0"
description = "Flexible frequency-band splitter for music source separation. The BandSplitRoformer module supports BSRoformer, MelBandRoformer, and custom overlapping or non-overlapping band configurations. Fully typed, modular, and documented, including migration help, usage, and paper references. PyTorch; CUDA-accelerated."
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-NC-4.0"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
maintainers = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
keywords = [
  "artificial intelligence",
  "audio source separation",
  "machine learning",
  "music source separation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "einops>=0.8.2",
  "hunterHearsPy>=1.0.0",
  "hunterMakesPy",
  "more-itertools",
  "opt-einsum>=3.4.0",
  "packaging",
  "pope-pytorch",
  "rotary-embedding-torch",
  "torch>=2.0.0",
  "torch-einops-kit",
  "torchaudio>=2.0.0",
]

[project.urls]
Context7 = "https://context7.com/hunterhogan/hunterformsbs"
Donate = "https://www.patreon.com/integrated"
Download = "https://pypi.org/project/hunterFormsBS"
Homepage = "https://github.com/hunterhogan/hunterFormsBS"
Issues = "https://github.com/hunterhogan/hunterFormsBS/issues"
Repository = "https://github.com/hunterhogan/hunterFormsBS.git"

[dependency-groups]
dev = ["pytest-cov"]
pytorch = [
  "torch==2.10.0;sys_platform == 'win32'",
  "torchaudio==2.10.0;sys_platform == 'win32'"
]
testing = ["pytest"]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.coverage]
report = { exclude_lines = ["if TYPE_CHECKING:", "if __name__ == \"__main__\":"], ignore_errors = false }
run = { branch = true, concurrency = ["multiprocessing"], data_file = "tests/coverage/.coverage", omit = [
  "tests/*"
], parallel = true, source = ["."] }

[tool.updateCitation]
filenameCitationDOTcff = "CITATION.cff"
pathFilenameCitationSSOT = "citations/CITATION.cff"

[tool.uv]
build-backend = { module-name = "hunterFormsBS", module-root = "src" }
default-groups = ["testing"]

[[tool.uv.index]]
explicit = true
name = "indexPytorch"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "indexPytorch", group = "pytorch" }
torchaudio = { index = "indexPytorch", group = "pytorch" }
